# cmakeForDummies

./: CMakeLists.txt
include/: Config.h.in  controller.h  model.h  storageModel.h  terminalView.h  view.h  vjAndFisherf.h  webcamModel.h  windowView.h
src/: CMakeLists.txt  controller.cpp  main.cpp  model.cpp  storageModel.cpp  terminalView.cpp  tutorial.cpp  view.cpp  vjAndFisherf.cpp  webcamModel.cpp  windowView.cpp
